@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.3-1
-Date: 2011-06-07
+Date: 2011-06-08
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
