@@ -1,4 +1,5 @@
 0.3-1
+- generalize tidem() argument list
 - read.adv.nortek() handle burst-mode data
 - add datasets wilson, redfieldNP, redfieldNC, and redfieldPlankton
 - change data(ctd) to be derived from data(ctdRaw)
